force-app/main/default/objects/Transaction_History__c/Transaction_History__c.object-meta.xml
<CustomObject>
    <description>Transaction History</description>
    <label>Transaction History</label>
    <nameField>
        <displayFormat>TRAN-{000000000}</displayFormat>
        <label>Transaction History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>