force-app/main/default/objects/Transaction_History__c/fields/Finance_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Account__c</fullName>
    <description>Finance Account</description>
    <inlineHelpText>Finance Account</inlineHelpText>
    <label>Finance Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Historys</relationshipLabel>
    <relationshipName>Transaction_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>