force-app/main/default/objects/Transaction_History__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Finance Account</label>
    <referenceTo>Finance_Account__c</referenceTo>
    <relationshipLabel>Transaction Historys</relationshipLabel>
    <relationshipName>Transaction_Historys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>