force-app/main/default/objects/Transaction_History__c/fields/merchantABN__c.field-meta.xml
<CustomField>
    <fullName>merchantABN__c</fullName>
    <label>merchantABN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>