force-app/main/default/objects/Transaction_History__c/fields/merchantBSB__c.field-meta.xml
<CustomField>
    <fullName>merchantBSB__c</fullName>
    <label>merchantBSB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>