force-app/main/default/objects/Transaction_History__c/fields/merchantName__c.field-meta.xml
<CustomField>
    <fullName>merchantName__c</fullName>
    <label>merchantName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>